<resources>
    <string name="app_name">이름봄</string>

    <string name="profile_new">새 프로필 생성</string>

    <!-- profile form -->
    <string name="profile_label_title">프로필 명</string>

    <string name="profile_label_name">이름 정보</string>
    <string name="profile_btn_hanja">한자 정보 입력</string>
    <string name="label_name_family">성</string>
    <string name="label_name_first">이름</string>
    <string name="label_name_family_example">차</string>
    <string name="label_name_first_example">은</string>

    <string name="profile_label_hanja_selection">漢</string>
    <string name="profile_label_birth">생년월일</string>
    <string name="profile_label_birth_time">태어난 시각</string>
    <string name="profile_label_additional">추가 정보</string>
    <string name="profile_label_gender">성별</string>
    <string name="profile_birth_year">년</string>
    <string name="profile_birth_month">월</string>
    <string name="profile_birth_day">일</string>
    <string name="profile_birth_hour">시</string>
    <string name="profile_birth_minute">분</string>
    <string name="profile_form_title_example">내 프로필</string>

    <string name="profile_form_btn_desc_country">country</string>

    <!-- search hanja -->
    <string name="search_hanja_title">한자 찾기</string>


    <!-- navigation menu item -->
    <string name="menu_item_title_home">홈 화면</string>
    <string name="menu_item_title_profiles">프로필 관리</string>
    <string name="menu_item_title_qna">Q&amp;A</string>
    <string name="menu_item_title_settings">설정</string>
    <string name="menu_item_title_app_info">앱 정보</string>

    <!-- menu items -->
    <string name="profile_management">프로필 관리</string>
    <string name="profile_edit">프로필 설정</string>

    <!-- services -->
    <string name="service_profile_report">프로필 보고서</string>
    <string name="service_naming">작명하기</string>
    <string name="service_naming_compare">비교하기</string>
    <string name="service_dummy">EMPTY</string>

    <!-- Common others -->
    <string name="open">열기</string>
    <string name="close">닫기</string>

    <string name="ok">확인</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>

    <string name="_0000">0000</string>
    <string name="_1">1</string>
    <string name="_00">00</string>
    <string name="seed">Seed</string>
    <string name="gender_male">남</string>
    <string name="gender_female">여</string>
    <string name="naming_genderRatio">사용 이름의 성비</string>
    <string name="naming_form">작명하기</string>
    <string name="naming_start">작명 시작</string>
    <string name="naming_result">작명 결과</string>
    <string name="naming_report">이름 평가 레포트</string>
    <string name="naming_report_empty_message">해당 조건에서는 적합한 이름이 존재하지 않아요. 다른 조건으로 찾아보세요!</string>

    <!-- Hint -->
    <string name="hint_hanja">金</string>
    <string name="hint_hanja_info">성씨 김</string>
    <string name="hint_search_hanja_by_meaning">뜻 검색 (\'美\'를 찾는다면 \'아름다울\' 입력)</string>
    <string name="hint_hanja_mi">美</string>
    <string name="hint_hanja_meaning_mi">아름다울 미</string>
    <string name="add_new_character">Add New Character</string>
    <string name="delete_last_character">Delete Last Character</string>
    <string name="title_overall">총 평</string>
    <string name="loading">로딩 중</string>
    <string name="menu_item_title_favorites">즐겨찾기 관리</string>
    <string name="favorite_management">즐겨찾기 관리</string>

</resources>