<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_home"
        android:title="@string/menu_item_title_home"
        android:icon="@drawable/symbol_home_24" />

    <item android:id="@+id/menu_item_profile_management"
        android:title="@string/menu_item_title_profiles"
        android:icon="@drawable/symbol_profile_24" />

    <item android:id="@+id/menu_item_favorite_management"
        android:title="@string/menu_item_title_favorites"
        android:icon="@drawable/round_star_24" />

    <item android:id="@+id/menu_item_qna"
        android:title="@string/menu_item_title_qna"
        android:icon="@drawable/symbol_question_answer_24"/>

    <item android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_title_settings"
        android:icon="@drawable/symbol_settings_24" />

    <item android:id="@+id/menu_item_app_info"
        android:title="@string/menu_item_title_app_info"
        android:icon="@drawable/symbol_info_24" />
</menu>