<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    android:gravity="center">
    <EditText
        style="@style/profile_form_input"
        android:id="@+id/profile_edit_char_text"
        android:autofillHints="givenName"
        android:hint="@string/label_name_first_example"/>
    <TextView
        style="@style/profile_form_label_sub_small"
        android:text="@string/label_name_first"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_edit_hanja_cardview"
        style="@style/cardview_round_button_smallest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/meta_light_green"
            android:gravity="center">

            <TextView
                android:id="@+id/profile_edit_hanja_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="false"
                android:text="@string/profile_label_hanja_selection" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>