<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_show_hanja_selection"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:textSize="90sp"
                android:textAlignment="center"
                android:hint="@string/hint_hanja"/>
            <TextView
                android:id="@+id/tv_show_hanja_meaning"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:singleLine="true"
                android:textAlignment="center"
                android:hint="@string/hint_hanja_info"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/sym_search_24"
                android:scaleType="fitCenter"/>
            <EditText
                android:id="@+id/et_hanja_query"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:maxLength="8"
                android:hint="@string/hint_search_hanja_by_meaning"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hanja_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>