<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">
        <androidx.cardview.widget.CardView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/meta_blended_green"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">
        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/service_cardview_naming"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/meta_blended_green"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/meta_blended_green">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="icon"
                        android:scaleType="fitCenter"
                        android:background="@drawable/icon_naming"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_naming" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/service_cardview_compare"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/meta_blended_green"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/meta_blended_green">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="icon"
                        android:scaleType="fitCenter"
                        android:background="@drawable/icon_compare"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_naming_compare" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/service_cardview_report"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/meta_blended_green"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/meta_blended_green">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="icon"
                        android:scaleType="fitCenter"
                        android:background="@drawable/icon_report"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_profile_report" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</layout>
